--- a/html/index.css
+++ b/html/index.css
@@ -19,8 +19,9 @@
   box-sizing: border-box;
 }
 p {
-  font-size: .8rem;
+  font-size: 1rem;
   width:100%;
+  line-height: 1.4rem;
 }
 html {
   font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
@@ -237,7 +238,7 @@ body {
   flex-direction: column;
   overflow: hidden;
 }
-.contents #page-content.bloc .card .content .front {
+.contents #index-content.bloc .card .content .front {
   min-height: 100%;
   height: 100%;
   padding:0 .2rem;
@@ -248,7 +249,7 @@ body {
   font-weight: 800;
   transition: all .2s ease-in;
 }
-.contents #page-content.bloc .card .content .back {
+.contents #index-content.bloc .card .content .back {
   min-height: 100%;
   height: 100%;
   overflow: hidden;
@@ -257,14 +258,15 @@ body {
   padding:0 .2rem;
   flex-direction: column;
 }
-.contents #page-content.bloc .card:hover .content .front {
+.contents #index-content.bloc .card:hover .content .front {
   height:0;
   min-height: 0;
   overflow: hidden;
   transition: all .2s ease-in;
 }
 /* content-info */
-.bloc.tests .card ,.bloc.info .card {
+.bloc.tests .card ,
+.bloc.info .card {
   height: unset;
   max-height: unset;
 }
@@ -272,12 +274,34 @@ body {
 .bloc.info .card .content {
   height: unset;
   max-height: unset;
-  padding:0 .5rem;
   width:100%;
 }
-.bloc.tests .card .content {
-  line-height: 1.4rem;
+.bloc.tests .card .content  {
+  display:flex;
+  flex-direction: column;
 }
+.bloc.tests .card .content .options .title {
+  background-color: rgb(192, 192, 192);
+}
+.bloc.tests .card .content .options .title h3 {
+  padding-left: .2rem;
+}
+.bloc.tests .card .content .options .option-item {
+  background-color: rgba(150, 149, 149, 0.925);
+  padding-left: .2rem;
+  display:flex;
+  flex-direction: column;
+}
+.bloc.tests .card .content .options .option-item h4,
+.bloc.tests .card .content .options .option-item p {
+  padding: .1rem .2rem;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+
+
 .bloc.info .card .content p {
   border-bottom: 1px solid rgba(0, 0, 0, 0.267);
 }
@@ -305,23 +329,22 @@ body {
 
 /* boutton */
 .boutton {
+  display: inline-block;
+  max-width : max-content;
   /* margin: .4rem auto; */
-  padding: 0 .4rem;
+  padding: .1rem .5rem;
   text-align: center;
-  border:1px solid black; 
-  border-radius: .4rem;
-  background-color:darkblue;
-  color: chartreuse;
+  border-radius: .3rem;
+  border:3px solid;
+  border-color: rgb(0, 0, 0); 
+  background-color:rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
 }
 .boutton:hover {
-  /* margin: .4rem auto; */
-  padding: 0 .4rem;
-  text-align: center;
   cursor: pointer;
-  border:1px solid black; 
-  border-radius: .4rem;
-  background-color: chartreuse;
-  color:darkblue
+  border-color: rgb(0, 255, 13);
+  background-color:rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 /* 
 .page {
